Remove useless empty lines

--- a/Explore_bikeshare_data.ipynb
+++ b/Explore_bikeshare_data.ipynb
@@ -431,8 +431,7 @@
     "              two_col_df(ny$User.Type, 'User.Type', 'New York'), \n",
     "              two_col_df(wash$User.Type, 'User.Type', 'Washington'))\n",
     "\n",
-    "\n",
-    "trips = cbind(trips, 'User.Type'=users[,1])\n"
+    "trips = cbind(trips, 'User.Type'=users[,1])"
    ]
   },
   {
@@ -765,7 +764,6 @@
     }
    ],
    "source": [
-    "\n",
     "# https://stackoverflow.com/questions/1923273/counting-the-number-of-elements-with-the-values-of-x-in-a-vector\n",
     "# https://www.guru99.com/r-data-frames.html\n",
     "count_table = function(var, var.Name, City.Name){\n",
@@ -851,7 +849,7 @@
     "    facet_wrap(~City, scales = \"free\") +\n",
     "    theme(axis.text.x = element_text(angle = 90)) +\n",
     "    ggtitle('Monthly Trips') +\n",
-    "    ylab('Monthly trip count')\n"
+    "    ylab('Monthly trip count')"
    ]
   },
   {
@@ -1161,7 +1159,6 @@
     "    names(trips) = c(paste('Most_common_', City.Name, '_trips', sep=''), 'Count')\n",
     "    return(trips)\n",
     "}\n",
-    "\n",
     "\n",
     "chi_trips = common_stations_summary(chi, 'Chicago')\n",
     "ny_trips = common_stations_summary(ny, 'New.York')\n",
